Varios/ArgoCD/namespace/ilba-guacamole/10-guacamole.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guacamole
  namespace: ilba-guacamole
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/app-root: /guacamole
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: guacamole.ilba.ilimit.net
      http:
        paths:
          - path: /guacamole
            pathType: Prefix
            backend:
               service:
                  name: svc-guacamole
                  port:
                     number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: svc-guacamole
  namespace: ilba-guacamole
  labels:
    run: guacamole
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    run: guacamole
---
apiVersion: v1
kind: Service
metadata:
  name: guacd-svc
  namespace: ilba-guacamole
  labels:
    run: guacd
spec:
  ports:
  - port: 4822
    protocol: TCP
  selector:
    run: guacd
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guacd
  namespace: ilba-guacamole
spec:
  selector:
    matchLabels:
      run: guacd
  replicas: 1
  template:
    metadata:
      labels:
        run: guacd
    spec:
      containers:
      - name: guacd
        image: guacamole/guacd:1.2.0
        ports:
        - containerPort: 4822
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guacamole
  namespace: ilba-guacamole
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      run: guacamole
  template:
    metadata:
      labels:
        run: guacamole
    spec:
      containers:
      - name: guacamole
        image: guacamole/guacamole:1.2.0
        ports:
        - name: http
          containerPort: 8080
        volumeMounts:
        - name: guacamole-conf
          mountPath: /etc/guacamole/          
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 45
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 2
          timeoutSeconds: 10
      volumes:
        - name: guacamole-conf 
          configMap:
            name: guacamole-conf
